assets/css/style.css
/* ... */
.form-control::-webkit-input-placeholder {
    color: #fff
}
.form-control:-moz-placeholder {
    color: #fff
}
.form-control::-moz-placeholder {
    color: #fff
}
.form-control:-ms-input-placeholder {
    color: #fff
}
.form-control.parsley-error {
    border-color: #ed2727
}
.parsley-errors-list {
    padding: 0;
    margin: 0
}
.parsley-errors-list li {
    display: inline-block;
    padding: 0 5px;
    background: #ed2727;
    margin: 5px 0
}
textarea {
    resize: none
}
.owl-carousel .owl-controls,
.home-carousel .owl-controls,
.owl-carousel .carousel-controls,
.home-carousel .carousel-controls {
    height: auto;
    position: absolute;
    top: 50%;
    margin: -54px 0 0 0;
    left: 0;
    width: 100%;
    z-index: 2
}
.owl-carousel .owl-controls .owl-prev,
.home-carousel .owl-controls .owl-prev,
.owl-carousel .carousel-controls .owl-prev,
.home-carousel .carousel-controls .owl-prev,
.owl-carousel .owl-controls .owl-next,
.home-carousel .owl-controls .owl-next,
.owl-carousel .carousel-controls .owl-next,
.home-carousel .carousel-controls .owl-next,
.owl-carousel .owl-controls .prev,
.home-carousel .owl-controls .prev,
.owl-carousel .carousel-controls .prev,
.home-carousel .carousel-controls .prev,
.owl-carousel .owl-controls .next,
.home-carousel .owl-controls .next,
.owl-carousel .carousel-controls .next,
.home-carousel .carousel-controls .next {
    font-size: 75px;
    position: absolute;
    width: auto;
    -moz-opacity: .7;
    -khtml-opacity: .7;
    -webkit-opacity: .7;
    opacity: .7
}
.owl-carousel .owl-controls .owl-prev:hover,
.home-carousel .owl-controls .owl-prev:hover,
.owl-carousel .carousel-controls .owl-prev:hover,
.home-carousel .carousel-controls .owl-prev:hover,
.owl-carousel .owl-controls .owl-next:hover,
.home-carousel .owl-controls .owl-next:hover,
.owl-carousel .carousel-controls .owl-next:hover,
.home-carousel .carousel-controls .owl-next:hover,
.owl-carousel .owl-controls .prev:hover,
.home-carousel .owl-controls .prev:hover,
.owl-carousel .carousel-controls .prev:hover,
.home-carousel .carousel-controls .prev:hover,
.owl-carousel .owl-controls .next:hover,
.home-carousel .owl-controls .next:hover,
.owl-carousel .carousel-controls .next:hover,
.home-carousel .carousel-controls .next:hover {
    -moz-opacity: 1;
    -khtml-opacity: 1;
    -webkit-opacity: 1;
    opacity: 1
}
.owl-carousel .owl-controls .owl-prev,
.home-carousel .owl-controls .owl-prev,
.owl-carousel .carousel-controls .owl-prev,
.home-carousel .carousel-controls .owl-prev,
.owl-carousel .owl-controls .prev,
.home-carousel .owl-controls .prev,
.owl-carousel .carousel-controls .prev,
.home-carousel .carousel-controls .prev {
    left: 5px
}
.owl-carousel .owl-controls .owl-next,
.home-carousel .owl-controls .owl-next,
.owl-carousel .carousel-controls .owl-next,
.home-carousel .carousel-controls .owl-next,
.owl-carousel .owl-controls .next,
.home-carousel .owl-controls .next,
.owl-carousel .carousel-controls .next,
.home-carousel .carousel-controls .next {
    right: 5px;
    left: auto
}
.owl-carousel .owl-controls .container,
.home-carousel .owl-controls .container,
.owl-carousel .carousel-controls .container,
.home-carousel .carousel-controls .container {
    position: relative
}
#header .navbar-brand {
    font-size: 60px;
    font-weight: 900;
    height: 70px;
    padding: 22px 15px
}
#header .navbar-toggle {
    background: #369eef;
    margin-top: 18px
}
#header .navbar-toggle .icon-bar {
    background: #fff
}
#header .navbar {
    height: 70px;
    background: #fff;
    -webkit-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .2);
    -moz-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .2);
    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, .2);
    border: 0
}
#header .navbar-nav {
    text-transform: uppercase
}
#header .navbar-nav>li>a {
    color: #000;
    font-weight: 400
}
#header .navbar-nav>li>a:hover,
#header .navbar-nav>li>a:focus {
    background: 0 0
}
#header .navbar-nav>li.active>a {
    color: #369eef
}
#header .navbar-collapse {
    background: #fff;
    padding-left: 15px;
    padding-right: 15px
}
#home {
    text-align: center;
    color: #fff;
    height: 770px
}
#home.dim {
    position: relative
}
#home.dim:before {
    content: '';
    width: 100%;
    height: 100%;
    position: absolute;
    background: rgba(0, 0, 0, .7);
    left: 0;
    top: 0
}
#home.dim>.container {
    z-index: 1;
    position: relative
}
#home.videoBg .carousel-inner .item {
    background: 0 0
}
#home.videoBg .carousel-inner .item.item-1,
#home.videoBg .carousel-inner .item.item-2,
#home.videoBg .carousel-inner .item.item-3 {
    background: 0 0
}
#home .carousel-inner {
    height: 100%
}
#home .carousel-inner .item {
    left: 0!important;
    -webkit-transition: opacity 1s;
    -moz-transition: opacity 1s;
    -ms-transition: opacity 1s;
    -o-transition: opacity 1s;
    height: 100%;
    background-repeat: repeat;
    background-position: center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover
}
#home .carousel-inner .item.item-1 {
    background-image: url(../../img/be-lazy.jpeg)
}
#home .carousel-inner .item.item-2 {
    background-image: url(../../img/bg_home-2.jpg)
}
#home .carousel-inner .item.item-3 {
    background-image: url(../../img/bg_home-3.jpg)
}
#home .carousel-inner .item .logo {
    margin-bottom: 35px
}
#home .carousel-inner .item .text {
    text-align: center
}
#home .carousel-inner .item .text.font-white h2,
#home .carousel-inner .item .text.font-white .stars {
    color: #fff
}
#home .carousel-inner .item .text.font-white .dotted-break span {
    background: #fff
}
#home .carousel-inner .item .text.font-white .dotted-break span:before,
#home .carousel-inner .item .text.font-white .dotted-break span:after {
    background: #fff
}
#home .carousel-inner .item .text h1 {
    font-size: 50px;
    margin: 5px 0;
    font-weight: 700;
    text-transform: uppercase
}
/* ... */

